--- a/alphaAiBack/.env
+++ b/alphaAiBack/.env
@@ -8,7 +8,7 @@ DB_PASSWORD=Alphaaifund@123
 DB_PORT=""
 # DJANGO_PORT=8080
 # WEBSITE_HOSTNAME="alpha-ai-backend-dha2h0a9gghmewfr.centralindia-01.azurewebsites.net"
-AZURE_SQL_CONNECTIONSTRING="jdbc:sqlserver://alphaaisql.database.windows.net:1433;database=alphaai;user=alphaadmin@alphaaisql;password=Alphaaifund@123;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;"
+AZURE_POSTGRESQL_CONNECTIONSTRING="dbname=alpha-ai-dashboard-database host=alpha-ai-dashboard-server.postgres.database.azure.com port=5432 sslmode=require user=rgdtfwming password=$0BuDlj$Yf5IlByq"
 
 
 MY_SECRET_KEY="django-insecure-_k1o3=ljjb0l8)7ft2v4q_yrrx2%$0ep&vc)1y6#l8!(%jr4o_"
