add env secret key

--- a/alphaAiBack/.env
+++ b/alphaAiBack/.env
@@ -11,4 +11,4 @@ DB_PORT=""
 AZURE_POSTGRESQL_CONNECTIONSTRING="dbname=alpha-ai-dashboard-database host=alpha-ai-dashboard-server.postgres.database.azure.com port=5432 sslmode=require user=rgdtfwming password=$0BuDlj$Yf5IlByq"
 
 
-MY_SECRET_KEY="django-insecure-_k1o3=ljjb0l8)7ft2v4q_yrrx2%$0ep&vc)1y6#l8!(%jr4o_"
+MY_SECRET_KEY="xcxzVqAln2Ye1DK9vvpZPBH58QpkR3Hw"
